--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/images/escudo-de-armas-de-concepcion-chile-logo-D9D8846676-seeklogo.com.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Municipalidad de concepción</title>
+    <title>Municipalidad de Concepción</title>
   </head>
   <body>
     <div id="root"></div>
